--- a/munin/templates/default/munin-node.conf.erb
+++ b/munin/templates/default/munin-node.conf.erb
@@ -23,21 +23,13 @@ ignore_file %$
 ignore_file \.dpkg-(tmp|new|old|dist)$
 ignore_file \.rpm(save|new)$
 
-# Set this if the client doesn't report the correct hostname when
-# telnetting to localhost, port 4949
-#
-#host_name localhost.localdomain
-<% if node[:ec2] %>
-host_name <%= node[:hostname] %>.ec2.internal
-<% end %>
-
 # A list of addresses that are allowed to connect.  This must be a
 # regular expression, due to brain damage in Net::Server, which
 # doesn't understand CIDR-style network notation.  You may repeat
 # the allow line as many times as you'd like
 
 <% @munin_servers.each do |server| -%>
-allow ^<%= server[:ipaddress].to_s.gsub(/\./, '\.') %>$
+allow ^<%= server[:cloud][:public_ips][0].to_s.gsub(/\./, '\.') %>$
 <% end -%>
 allow ^127\.0\.0\.1$
 
