--- a/munin/templates/default/localsystem.apache2.conf.erb
+++ b/munin/templates/default/localsystem.apache2.conf.erb
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
   ServerAdmin     ops@<%= node[:domain] %>
   ServerName      <%= node[:fqdn] %>
-	ServerAlias     munin munin.<%= node[:app_environment] %>.<%= node[:domain] %>
+	ServerAlias     munin munin.<%= node[:domain] %>
   DocumentRoot    <%= node[:munin][:docroot] %>
   CustomLog       <%= node[:apache][:log_dir] %>/munin_access.log combined
   ErrorLog        <%= node[:apache][:log_dir] %>/munin_error.log
