--- a/munin/templates/default/munin-node.conf.erb
+++ b/munin/templates/default/munin-node.conf.erb
@@ -28,8 +28,8 @@ ignore_file \.rpm(save|new)$
 # doesn't understand CIDR-style network notation.  You may repeat
 # the allow line as many times as you'd like
 
-<% @munin_servers.each do |server| -%>
-allow ^<%= server[:cloud][:public_ips][0].to_s.gsub(/\./, '\.') %>$
+<% @munin_servers.each do |munin_server| -%>
+allow ^<%= munin_server[:fqdn].gsub(/\./, '\.') %>$
 <% end -%>
 allow ^127\.0\.0\.1$
 
