--- a/kerberos/templates/default/krb5.conf.erb
+++ b/kerberos/templates/default/krb5.conf.erb
@@ -18,7 +18,7 @@
   kdc = <%= krb5_kdc[:fqdn] %>
   <% end -%>
 
-  admin_server = <%= @krb5_kdcs[0][:fqdn] %>
+  admin_server = <%= @krb5_kdcs[0][:cloud][:public_ips][0] %>
  }
 
 [domain_realm]
