--- a/kerberos/templates/default/kdb5_util-create.expect.erb
+++ b/kerberos/templates/default/kdb5_util-create.expect.erb
@@ -3,13 +3,12 @@
 set timeout -1
 spawn $env(SHELL)
 match_max 100000
-send -- "kdb5_util create -s"
-expect -exact "kdb5_util create -s"
+send -- "/usr/kerberos/sbin/kdb5_util create -s"
+expect -exact "/usr/kerberos/sbin/kdb5_util create -s"
 send -- "\r"
 expect "Enter KDC database master key: "
 send -- "<%= @kdc_database_master_key %>\r"
-expect -exact "\r
-Re-enter KDC database master key to verify: "
+expect "Re-enter KDC database master key to verify: "
 send -- "<%= @kdc_database_master_key %>\r"
 expect "\r"
 send -- "exit\r"
