tweaking some munin plugins

--- a/appserver-config-a/templates/default/haproxy.cfg.erb
+++ b/appserver-config-a/templates/default/haproxy.cfg.erb
@@ -52,6 +52,7 @@ defaults
     timeout server 300000
     maxconn     60000
     retries     3
+    stats uri /haproxy-status
 
 #---------------------------------------------------------------------
 # main frontend which proxys to the backends
