--- a/apache2/templates/default/mods/authopenid.load.erb
+++ b/apache2/templates/default/mods/authopenid.load.erb
@@ -1,1 +1,6 @@
-LoadModule authopenid_module <%= node[:apache][:modules_dir] %>/mod_auth_openid.so
+<% case node[:platform] -%>
+<% when "arch" -%>
+LoadModule authopenid_module /usr/lib/httpd/modules/mod_auth_openid.so
+<% else -%>
+LoadModule authopenid_module /usr/lib/apache2/modules/mod_auth_openid.so
+<% end -%>
